--- a/assets/css/preflight.css
+++ b/assets/css/preflight.css
@@ -2,15 +2,17 @@ html {
   font-size: 16.5px;
 }
 
-*:focus,
+*,
 .shadow-0,
 .shadow,
 .shadow-1,
 .shadow-2,
 .shadow-3,
 .shadow-4,
-.shadow-inner {
-  @apply shadow-outline;
+.-shadow {
+  &:focus {
+    @apply shadow-outline;
+  }
 }
 
 em {
@@ -19,4 +21,8 @@ em {
 
 *::selection {
   @apply bg-primary-500 text-primary-100;
+}
+
+* {
+  @apply transition-3;
 }
