--- a/assets/css/prose/index.css
+++ b/assets/css/prose/index.css
@@ -1,9 +1,9 @@
 @import "./utilities.css";
 @import "./article.css";
-@import "./article-code.css";
 @import "./aside.css";
 @import "./blockquote.css";
 @import "./codeblock.css";
+@import "./syntax.css";
 @import "./details.css";
 @import "./grid.css";
 @import "./heading.css";
