dat full bleed codeblock

--- a/assets/css/prose/utilities.css
+++ b/assets/css/prose/utilities.css
@@ -12,6 +12,6 @@
   }
 
   .scrollable {
-    @apply scrolling-touch overflow-x-scroll -shadow;
+    @apply scrolling-touch overflow-x-scroll;
   }
 }
