--- a/assets/css/prose/article.css
+++ b/assets/css/prose/article.css
@@ -154,13 +154,13 @@
   }
 }
 
-@media screen and (max-width: theme(screens.sm)) {
+@media screen and (min-width: theme(screens.sm)) {
   .baleada-prose-article {
     @apply px-9;
   }
 }
 
-@media screen and (max-width: theme(screens.lg)) {
+@media screen and (min-width: theme(screens.lg)) {
   .baleada-prose-article {
     @apply px-11;
   }
@@ -171,10 +171,14 @@
     @apply text-primary-gray-400;
 
     a {
-      @apply text-gray-100;
+      @apply underline text-inherit;
 
       &:visited {
-        @apply text-gray-100;
+
+      }
+
+      &:hover {
+        @apply text-gray-200;
       }
     }
 
