--- a/assets/css/prose/blockquote.css
+++ b/assets/css/prose/blockquote.css
@@ -1,14 +1,14 @@
-.baleada-prose-article .contents {
+.baleada-prose-article {
   blockquote::before {
     content: '\201C';
     @apply absolute text-9 font-300 text-primary-900 opacity-70 top-0 left-0 -mt-1/2em;
   }
 
   blockquote {
-    @apply relative pl-6 pr-4 py-3 rounded bg-primary-100 shadow-1 text-primary-900;
+    @apply relative pl-6 pr-4 py-3 font-display rounded bg-primary-100 shadow-1 text-primary-900;
 
     p {
-      @apply text-4
+      @apply text-6
     }
   }
 
@@ -16,23 +16,23 @@
     @apply relative;
 
     & > a {
-      @apply absolute top-0 left-0 h-7 w-7 flex items-center p-2 shadow-1 rounded-full bg-primary-200 text-primary-900 transition-2;
-      transform: translate(-33%, -33%);
+      @apply absolute bottom-0 right-0 h-7 w-7 flex items-center p-2 shadow-1 rounded-full bg-primary-200 text-primary-900 transition-2;
+      transform: translate(33%, 33%);
 
       svg {
         @apply block h-full w-full fill-current;
       }
 
       &:hover {
-        transform: scale(1.1) translate(-33%, -33%);
+        transform: scale(1.1) translate(33%, 33%);
       }
 
       &:focus {
-        transform: scale(1) translate(-33%, -33%);
+        transform: scale(1) translate(33%, 33%);
       }
 
       &:active {
-        transform: scale(1) translate(-33%, -33%);
+        transform: scale(1) translate(33%, 33%);
       }
     }
 
@@ -47,7 +47,7 @@
 
   .dark & {
     blockquote {
-      @apply bg-primary-gray-900 text-primary-gray-300;
+      @apply bg-primary-gray-850 text-primary-gray-300;
     }
 
     .baleada-prose-blockquote {
@@ -66,6 +66,29 @@
 
     blockquote::before {
       @apply text-10;
+    }
+  }
+}
+
+@media screen and (min-width: theme('screens.lg')) {
+  .baleada-prose-article {
+    .baleada-prose-blockquote {
+      & > a {
+        @apply top-0 left-0;
+        transform: translate(-33%, -33%);
+
+        &:hover {
+          transform: scale(1.1) translate(-33%, -33%);
+        }
+
+        &:focus {
+          transform: scale(1) translate(-33%, -33%);
+        }
+
+        &:active {
+          transform: scale(1) translate(-33%, -33%);
+        }
+      }
     }
   }
 }
