--- a/assets/css/prose/codeblock.css
+++ b/assets/css/prose/codeblock.css
@@ -8,30 +8,34 @@
   }
 
   .baleada-prose-codeblock {
-    @apply relative;
+    @apply relative -left-7 w-screen;
 
     .contents {
       @apply relative;
+
+      pre {
+        @apply pl-7;
+      }
     }
 
     & > button {
       @apply absolute top-0 right-0 h-7 w-7 flex items-center p-2 shadow-1 rounded-full bg-gray-100 text-gray-1000 transition-2;
-      transform: translate(33%, -33%);
+      transform: translate(-33%, -50%);
 
       svg {
         @apply block h-full w-full fill-current;
       }
 
       &:hover {
-        transform: scale(1.1) translate(33%, -33%);
+        transform: scale(1.1) translate(-33%, -50%);
       }
 
       &:focus {
-        transform: scale(1) translate(33%, -33%);
+        transform: scale(1) translate(-33%, -50%);
       }
 
       &:active {
-        transform: scale(1) translate(33%, -33%);
+        transform: scale(1) translate(-33%, -50%);
       }
     }
   }
@@ -45,10 +49,58 @@
   }
 }
 
+@media screen and (min-width: theme('screens.sm')) {
+  .baleada-prose-article {
+    .baleada-prose-codeblock {
+      @apply -left-9;
+
+      .contents {
+        pre {
+          @apply pl-9;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (min-width: theme('screens.md')) {
   .baleada-prose-article {
     .baleada-prose-codeblock {
       @apply max-h-full;
+    }
+  }
+}
+
+@media screen and (min-width: theme('screens.lg')) {
+  .baleada-prose-article {
+    .baleada-prose-codeblock {
+      @apply left-0 w-auto;
+
+      .contents {
+        pre {
+          @apply pl-5;
+        }
+      }
+
+      & > button {
+        transform: translate(33%, -33%);
+
+        svg {
+          @apply block h-full w-full fill-current;
+        }
+
+        &:hover {
+          transform: scale(1.1) translate(33%, -33%);
+        }
+
+        &:focus {
+          transform: scale(1) translate(33%, -33%);
+        }
+
+        &:active {
+          transform: scale(1) translate(33%, -33%);
+        }
+      }
     }
   }
 }
