install baleada listenable gestures and publish baleada gestures doc. Also css tweaks

--- a/assets/css/prose/article.css
+++ b/assets/css/prose/article.css
@@ -39,6 +39,11 @@
     & > .baleada-prose-media {
       @apply mx-auto max-w-full scrollable;
     }
+
+    & > pre,
+    & > .baleada-prose-codeblock > .contents > pre {
+      @apply scrollable;
+    }
   }
 
 
