fix typos and css bug

--- a/assets/css/prose/list.css
+++ b/assets/css/prose/list.css
@@ -1,6 +1,8 @@
 .baleada-prose-article .contents {
   ul,
   ol {
+    counter-reset: item;
+    
     li {
       @apply relative pl-8 leading-2;
 
