--- a/assets/css/prose/aside.css
+++ b/assets/css/prose/aside.css
@@ -2,7 +2,7 @@
   @apply relative flex items-start rounded-r-1 p-5 my-6 border-l-4;
 
   & > svg {
-    @apply absolute -left-2px -translate-x-50 h-7 w-7 rounded-full p-1 fill-current;
+    @apply absolute -left-4px -translate-x-50 h-7 w-7 rounded-full p-1 fill-current;
   }
 
   &.baleada-prose-aside-info {
@@ -105,6 +105,31 @@
     }
   }
 
+  &.baleada-prose-aside-simple {
+    @apply border-gray-500 bg-gray-100 text-gray-900;
+
+    &::before {
+      background-image: linear-gradient(to bottom, theme(colors.gray-500) 0%, theme(colors.gray-500) 1.5rem, theme(colors.white) 1.5rem, theme(colors.white) 3rem, theme(colors.gray-500) 3rem, theme(colors.gray-500) 110%);
+    }
+
+    & > svg {
+      @apply bg-gray-500 text-gray-100;
+    }
+
+    code,
+    kbd {
+      @apply bg-gray-200;
+    }
+
+    a {
+      @apply text-gray-700 font-600;
+    }
+
+    li::before {
+      @apply text-gray-700;
+    }
+  }
+
   .dark & {
     &.baleada-prose-aside-info {
       @apply border-blue-800 bg-blue-900 text-blue-100;
@@ -200,6 +225,30 @@
 
       li::before {
         @apply text-green-200;
+      }
+    }
+    &.baleada-prose-aside-simple {
+      @apply border-gray-800 bg-gray-900 text-gray-100;
+
+      &::before {
+        background-image: linear-gradient(to bottom, theme(colors.gray-800) 0%, theme(colors.gray-800) 1.5rem, theme(colors.gray-800) 1.5rem, theme(colors.gray-800) 3rem, theme(colors.gray-800) 3rem, theme(colors.gray-800) 110%);
+      }
+
+      & > svg {
+        @apply bg-gray-700 text-gray-300;
+      }
+
+      code,
+      kbd {
+        @apply bg-gray-800;
+      }
+
+      a {
+        @apply text-gray-300;
+      }
+
+      li::before {
+        @apply text-gray-200;
       }
     }
   }
