--- a/assets/css/prose/heading.css
+++ b/assets/css/prose/heading.css
@@ -69,15 +69,16 @@
       }
 
       &:hover {
-        transform:  scale(1.1) translate(-100%, 0%);
+        transform: scale(1.1) translate(-100%, 0%);
       }
 
       &:focus {
-        transform:  scale(1) translate(-100%, 0%);
+        @apply opacity-100;
+        transform: scale(1) translate(-100%, 0%);
       }
 
       &:active {
-        transform:  scale(1) translate(-100%, 0%);
+        transform: scale(1) translate(-100%, 0%);
       }
     }
 
