--- a/assets/css/prose/details.css
+++ b/assets/css/prose/details.css
@@ -1,9 +1,9 @@
 .baleada-prose-details {  
   summary {
-    @apply cursor-pointer inline-flex items-center rounded-1 list-none;
+    @apply cursor-pointer inline-flex items-center rounded-3 list-none;
 
     svg {
-      @apply h-1em w-1em fill-current;
+      @apply h-em-1 w-em-1 fill-current;
       transform-origin: center;
     }
 
