--- a/assets/css/prose/utilities.css
+++ b/assets/css/prose/utilities.css
@@ -1,6 +1,6 @@
 @variants responsive, group-hover, focus-within, hover, focus, active {
   .with-max-h {
-    @apply max-h-2/3-screen;
+    @apply max-h-screen-2/3;
   }
 
   .with-max-w {
