--- a/src/styles/prose/blockquote.css
+++ b/src/styles/prose/blockquote.css
@@ -16,7 +16,7 @@
     @apply relative;
 
     & > a {
-      @apply absolute bottom-0 right-0 h-7 w-7 flex items-center p-2 shadow-3 rounded-full bg-primary-20 text-primary-90 transition-2;
+      @apply absolute bottom-0 right-0 h-7 w-7 flex items-center p-2 shadow-3 rounded-full bg-primary-20 text-primary-90 transition duration-2;
       transform: translate(33%, 33%);
 
       svg {
