--- a/src/styles/prose/utilities.css
+++ b/src/styles/prose/utilities.css
@@ -1,6 +1,6 @@
 @variants responsive, group-hover, focus-within, hover, focus, active {
   .with-max-h {
-    @apply max-h-screen-2/3;
+    @apply max-h-[calc(2/3*100vh)];
   }
 
   .with-max-w {
