batch of bugfixes and API improvements for styles and Vue Prose

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 @import "./styles/prose/media.css";
 /* purgecss end ignore */
 
+@import "./styles/docs-nav.css";
+@import "./styles/docs-table-of-contents.css";
 @import "./styles/docs-table-utilities.css";
 
 @import "tailwindcss/components";
